--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/WorkOrder2Cell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/WorkOrder2Cell.xib
@@ -67,7 +67,7 @@
                                     <constraint firstAttribute="height" constant="1" id="nkN-a3-z5q"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="武汉创意天地" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePb-QB-pcG">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="武汉创意天地" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePb-QB-pcG">
                                 <rect key="frame" x="19" y="17" width="90" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="kBN-0K-dbw"/>
