--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
@@ -866,7 +866,7 @@
                                             <action selector="doneBtnClick" destination="emb-JF-xJq" eventType="touchUpInside" id="N7x-jJ-vLH"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVZ-OI-GnF">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVZ-OI-GnF">
                                         <rect key="frame" x="305" y="669" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="JWj-lu-J1u"/>
